@@ -8,6 +8,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* added missing pop_alerts() to python bindings
 	* fixed typos in configure script, inversing some feature-enable/disable flags
 	* added missing flag_update_subscribe to python bindings
 	* active_dht_limit, active_tracker_limit and active_lsd_limit now interpret -1 as infinite
